Update to workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
         server: www.theupfolio.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        server-dir: Upfolio/Upfolio
+        server-dir: /Upfolio/Upfolio/
